tests/ui/parser/diff-markers/unclosed-delims.stderr
error: this file contains an unclosed delimiter
  --> $DIR/unclosed-delims.rs:12:54
   |
LL | mod tests {
   |           - unclosed delimiter
...
LL |     fn test1() {
   |                - this delimiter might not be properly closed...
...
LL | }
   | -                                                   ^
   | |
   | ...as it matches this but it has different indentation

error: aborting due to 1 previous error

